update docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,14 @@ services:
       - .env
   mysql:
     image: mysql:8.0
+    platform: linux/x86_64
     volumes:
       - ./.docker/setup.sql:/docker-entrypoint-initdb.d/setup.sql
       - site-mysql-data:/var/lib/mysql
     env_file:
       - .env
   flyway:
+    platform: linux/x86_64
     command: -url=jdbc:mysql://mysql/${MYSQL_DB} -user=${MYSQL_USER} -password=${MYSQL_PASSWORD} migrate
     build:
       context: .
