--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM flyway/flyway:8.0.4-alpine
+FROM flyway/flyway:8.0.4
 COPY ./.docker/db/migrations/*.sql /flyway/sql/
 COPY ./flyway.conf /flyway/conf/
 ENTRYPOINT [ "flyway", "migrate" ]
