--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     env_file:
       - .env
   flyway:
-    command: -url=jdbc:mysql://mysql/${MYSQL_DB} -user=${MYSQL_USER} -password=${MYSQL_PASSWORD} migrate
+    command: -url=jdbc:mysql://mysql/${MYSQL_DB}?useSSL=false&allowPublicKeyRetrieval=true migrate
     build:
       context: .
       dockerfile: ./.docker/Dockerfile
