--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
     env_file:
       - .env
   flyway:
+    platform: ${PLATFORM}
     command: -url=jdbc:mysql://mysql/${MYSQL_DB}?useSSL=false&allowPublicKeyRetrieval=true migrate
     build:
       context: .
