--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - ./:/app
     env_file:
       - .env
+    depends_on:
+      - mysql
   mysql:
     image: mysql:8.0
     volumes:
