set up some env changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,10 @@ services:
       dockerfile: ./.docker/Dockerfile
     depends_on:
       - mysql
-volumes: 
+volumes:
   site-mysql-data:
+    driver: ${VOLUME_DRIVER}
+    driver_opts:
+      type: ${VOLUME_TYPE}
+      device: ${VOLUME_DEVICE}
+      o: ${VOLUME_BIND_OPTS}
