--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,11 @@ services:
       MYSQL_DATABASE: ${MYSQL_DB}
   flyway:
     platform: ${PLATFORM}
-    command: -url=jdbc:mysql://mysql/${MYSQL_DB}?allowPublicKeyRetrieval=true -user=${MYSQL_USER} -password=${MYSQL_PASSWORD} migrate
+    command: >
+      -url=jdbc:mysql://mysql:3306/${MYSQL_DB}?allowPublicKeyRetrieval=true
+      -user=${MYSQL_USER}
+      -password=${MYSQL_PASSWORD}
+      migrate
     build:
       context: .
       dockerfile: ./.docker/Dockerfile
