--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     working_dir: /app
     volumes: 
       - ./:/app
+    networks:
+      - db_network
     env_file:
       - .env
     depends_on:
@@ -18,6 +20,8 @@ services:
       - site-mysql-data:/var/lib/mysql
     ports:
       - 3306:3306
+    networks:
+      - db_network
     env_file:
       - .env
     environment:
@@ -32,11 +36,15 @@ services:
       -user=${MYSQL_USER}
       -password=${MYSQL_PASSWORD}
       migrate
+    networks:
+      - db_network
     build:
       context: .
       dockerfile: ./.docker/Dockerfile
     depends_on:
       - mysql
+networks:
+  db_network:
 volumes:
   site-mysql-data:
     driver: ${VOLUME_DRIVER}
