--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     working_dir: /app
     volumes: 
       - ./:/app
+      - ${FILE_UPLOAD_PATH}:/data
     env_file:
       - .env
     depends_on:
